# assessment-voice-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
static/: index.html
tests/: test_main.py
